--- a/app/bin/main/webapp/WEB-INF/static/template/error.html
+++ b/app/bin/main/webapp/WEB-INF/static/template/error.html
@@ -9,13 +9,13 @@
             .jb-large { font-size: large; }
             .jb-x-large { font-size: x-large; }
             .jb-xx-large { font-size: xx-large; }
-            .bolded { font-weight: bold;}
+            .bolded { font-weight: bold; }
           </style>  
     </head>
     <body>        
-        <p class="jb-xx-large"><span class="bolded"><img src="/logo32.png"/> Error code: @code</span></p>
+        <p class="jb-xx-large"><span class="bolded"><img src="../img/logo32.png"/> Error code: @code</span></p> 
         <p class="jb-medium">Type: <span class="bolded">@type</span></p>
-        <p class="jb-medium">Message: </p>
+        <p class="jb-medium">Message: </p>  
         <p class="jb-small">@message</p>    
     </body>
 </html>
