--- a/app/src/main/resources/webapp/WEB-INF/static/template/resource.html
+++ b/app/src/main/resources/webapp/WEB-INF/static/template/resource.html
@@ -19,14 +19,14 @@
     </style>  
  </head>
  <body>
-    <p class="jb-xx-large"><img style="vertical-align:middle" src="/logo32.png"/><span class="bolded"> Leap Directory</span></p>
+    <p class="jb-xx-large"><img style="vertical-align:middle" src="../img/logo32.png"/><span class="bolded"> Leap Directory</span></p>
     <p class="jb-large; bolded">@path</p>
     <p class="jb-medium">The directories linked below contain current resources from Leap server(@host) 
         <a href="http://@host/">Move to home</a>.
     </p>
     <p class="jb-large">List of resources.</p>
     <pre>
-        <span class="label"><a href="">Name</a></span><span class="lastModi"><a href="">Last modified</a></span><span class="fileSize"><a href="">Size</a></span><span class="fileSize"><a href="">Description</a></span>  
+        <span class="label">Name</span><span class="lastModi">Last modified</span><span class="fileSize">Size</span><span class="fileSize">Description</span>  
         <hr>
 <a href="@path/..">..</a><br>
 @list
