--- a/app/src/main/resources/webapp/WEB-INF/static/template/response.html
+++ b/app/src/main/resources/webapp/WEB-INF/static/template/response.html
@@ -15,7 +15,7 @@
         </style>
       </head>    
     <body>
-      <p class="jb-large"><img style="vertical-align:middle" src="/logo32.png"/><span class="bolded">Response code: @code</span></p>
+      <p class="jb-large"><img style="vertical-align:middle" src="../img/logo32.png"/><span class="bolded">Response code: @code</span></p>
       <p class="jb-medium">Type: @type</p>
       <p class="jb-medium">Message: </p>    
       <p class="jb-small">@message</p>  
