--- a/app/src/main/resources/webapp/WEB-INF/static/template/error.html
+++ b/app/src/main/resources/webapp/WEB-INF/static/template/error.html
@@ -13,7 +13,7 @@
           </style>  
     </head>
     <body>        
-        <p class="jb-xx-large"><span class="bolded"><img src="../img/logo32.png"/> Error code: @code</span></p> 
+        <p class="jb-xx-large"><span class="bolded"><img src="/img/logo32.png"/> Error code: @code</span></p> 
         <p class="jb-medium">Type: <span class="bolded">@type</span></p>
         <p class="jb-medium">Message: </p>  
         <p class="jb-small">@message</p>    
