--- a/app/src/main/resources/webapp/WEB-INF/static/template/resource.html
+++ b/app/src/main/resources/webapp/WEB-INF/static/template/resource.html
@@ -19,7 +19,7 @@
     </style>  
  </head>
  <body>
-    <p class="jb-xx-large"><img style="vertical-align:middle" src="../img/logo32.png"/><span class="bolded"> Leap Directory</span></p>
+    <p class="jb-xx-large"><img style="vertical-align:middle" src="/img/logo32.png"/><span class="bolded"> Leap Directory</span></p>
     <p class="jb-large; bolded">@path</p>
     <p class="jb-medium">The directories linked below contain current resources from Leap server(@host) 
         <a href="http://@host/">Move to home</a>.
