--- a/app/bin/main/webapp/WEB-INF/static/templates/monitor.html
+++ b/app/bin/main/webapp/WEB-INF/static/templates/monitor.html
@@ -5,12 +5,12 @@
     <p class="font-x-largeg">Leap Monitoring Page</p>
     <br>
     <div id="cpu">
-        <img src="config/monitor/cpu.png"/>
+        <img src="monitor/cpu.png"/>
     </div>
     <div id="memory">
-        <img src="config/monitor/memory.png"/>
+        <img src="monitor/memory.png"/>
     </div>
     <div id="thread">
-        <img src="config/monitor/thread.png"/>
+        <img src="monitor/thread.png"/>
     </div>
 </div>
