--- a/app/bin/main/webapp/WEB-INF/static/templates/monitor.html
+++ b/app/bin/main/webapp/WEB-INF/static/templates/monitor.html
@@ -1,16 +1,21 @@
-
-<div>
-    <p class="font-xx-large"><span id="host" class="font-bold"></span></p>
-    <!-- <p id="path" class="font-large font-bold">/</p> -->
-    <p class="font-x-largeg">Leap Monitoring Page</p>
-    <br>
-    <div id="cpu">
-        <img src="monitor/cpu.png"/>
-    </div>
-    <div id="memory">
-        <img src="monitor/memory.png"/>
-    </div>
-    <div id="thread">
-        <img src="monitor/thread.png"/>
-    </div>
+<p class="font-x-large font-bold"><a href="/"><img class="img" src="/img/logo32.png"/></a> Leap Monitoring Page</p>
+<div class="default-width">
+    <hr align="left">
+    <table>
+        <th ><p class="font-large align-left">Chart</p></th>
+        <th ><p class="font-large align-left">Analysis</p></th>
+        <tr padding="5">
+            <td><img id="cpu" src="monitor/cpu.png" width="400px"/></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td><img id="memory" src="monitor/memory.png" width="400px"/></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td><img id="thread" src="monitor/thread.png" width="400px"/></td>
+            <td></td>
+        </tr>
+    </table>
+    <hr align="left">
 </div>
