--- a/app/bin/main/webapp/WEB-INF/static/templates/resource.html
+++ b/app/bin/main/webapp/WEB-INF/static/templates/resource.html
@@ -1,7 +1,7 @@
 
 <script>
     const resJson = '<!--@resourceList-->';
-    window.onload = () => generateResource(resJson);
+    window.onload = () => genDir(resJson);
 </script>
 <div>
     <p class="font-xx-large"><span id="host" class="font-bold"></span></p>
