--- a/app/bin/main/webapp/WEB-INF/static/css/style.css
+++ b/app/bin/main/webapp/WEB-INF/static/css/style.css
@@ -71,4 +71,21 @@
 .align-left {
     text-align: left;
 }
-
+.default-width {
+    width: 90%;
+}
+td {        
+    border-top: 2px solid lightskyblue;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    padding-left: 0px;
+    padding-right: 20px;
+}
+hr {
+    position: relative;
+    border: none;
+    height: 5px;
+    background: lightskyblue;
+    margin-bottom: 20px;
+}
