--- a/app/src/main/resources/webapp/WEB-INF/static/templates/default.html
+++ b/app/src/main/resources/webapp/WEB-INF/static/templates/default.html
@@ -4,11 +4,13 @@
         <meta charset="utf-8">
         <title>Leap?</title>
         <link rel="stylesheet" href="/css/style.css">
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
         <script>
-            //@javascript//
+//@script//
         </script>
     </head>
     <body class="content">
-        <!-- @body -->
+<!-- @body -->
     </body>
 </html>
