--- a/app/src/main/resources/webapp/WEB-INF/static/templates/monitor.html
+++ b/app/src/main/resources/webapp/WEB-INF/static/templates/monitor.html
@@ -1,21 +1,21 @@
 <p class="font-x-large font-bold"><a href="/"><img class="img" src="/img/logo32.png"/></a> Leap Monitoring Page</p>
+<hr align="left">
 <div class="default-width">
-    <hr align="left">
     <table>
-        <th ><p class="font-large align-left">Chart</p></th>
-        <th ><p class="font-large align-left">Analysis</p></th>
+        <th ><p class="font-large align-left">Performance</p></th>
+        <th ><p class="font-large align-left">Memory</p></th>
         <tr padding="5">
             <td><img id="cpu" src="monitor/cpu.png" width="400px"/></td>
-            <td></td>
-        </tr>
-        <tr>
             <td><img id="memory" src="monitor/memory.png" width="400px"/></td>
-            <td></td>
         </tr>
         <tr>
             <td><img id="thread" src="monitor/thread.png" width="400px"/></td>
+            <td><img id="heap" src="monitor/heap.png" width="400px"/></td>
+        </tr>
+        <tr>
+            <td></td>
             <td></td>
         </tr>
     </table>
-    <hr align="left">
 </div>
+<hr align="left">
