--- a/app/src/main/resources/webapp/WEB-INF/templates/welcome.html
+++ b/app/src/main/resources/webapp/WEB-INF/templates/welcome.html
@@ -49,15 +49,18 @@
         <div>
             <p class="font-bold font-large">Leap Default / Virtual Host Management</p>
             <pre>
-home/- webapp/- services(custom)/
-    |        |
-    |        |- WEB-INF/- static/- css/
-    |                           |- img/
-    |                           |- monitor/
-    |- logs/                    |- script/
-                                |- templates/
-                                |- video/
-                                |- welcome.html
+/root/- webapp/
+     |        |
+     |        |- WEB-INF/
+     |                  |- classes(custom services)/
+     |                  |- css/
+     |                  |- img/
+     |                  |- monitor/
+     |- logs/           |- script/
+                        |- templates/
+                        |- video/
+                        |- views/
+                        |- favicon.ico
             </pre>
         </div>
         <br>        
